--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -43,10 +43,11 @@ jobs:
       #   if: steps.cache-npm.outputs.cache-hit != 'true'
       #   run: yarn install    
 
-      # - name: Override ENV for production build
-      #   if: github.ref == 'refs/heads/master'
-      #   run: |
-      #     echo "SUB_DOMAIN=$SUBDOMAIN" >> $GITHUB_ENV
+      - name: Override ENV for production build
+        if: github.ref == 'refs/heads/master'
+        run: |
+          echo "SUB_DOMAIN=$SUBDOMAIN" >> $GITHUB_ENV
+          
       # - name: Build www
       #   run: yarn build
 
